chore: add lerna repo

--- a/packages/og-aws-seed/package.json
+++ b/packages/og-aws-seed/package.json
@@ -25,7 +25,7 @@
     "prepublishOnly": "npm run build",
     "prebuild": "npm run clean && npm run format && npm run lint && echo Using TypeScript && tsc --version",
     "build": "npm run compile",
-    "compile": "tsc -p tsconfig.json",
+    "compile": "tsc -p tsconfig.build.json",
     "test": "jest",
     "coverage": "jest --coverage",
     "watch": "npm run compile -- --watch",
@@ -40,6 +40,7 @@
     "@types/mdast": "^3.0.3",
     "@types/node": "13.11.0",
     "@types/nodegit": "^0.26.8",
+    "@types/pino": "^6.3.0",
     "jest": "^23.6.0",
     "prettier": "2.0.5",
     "rimraf": "^2.6.2",
